WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41206
Specificity of negated selectors apparently miscalculated
https://bugs.webkit.org/show_bug.cgi?id=41206
Summary
Specificity of negated selectors apparently miscalculated
Daniel Glazman
Reported
2010-06-25 03:36:23 PDT
Tested with trunk - Version 5.0 (6533.16,
r61783
) The test at
http://disruptive-innovations.com/zoo/csswg/specificity-test.html
should show a green background and not a red one. Too high specificity for :not() ?
Attachments
Patch.
(9.02 KB, patch)
2011-01-08 11:46 PST
,
Yael
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2011-01-08 11:46:04 PST
Created
attachment 78324
[details]
Patch. Give negated selectors the specificity of the selector they are negating.
Yael
Comment 2
2011-01-09 13:53:22 PST
(In reply to
comment #1
)
> Created an attachment (id=78324) [details] > Patch. > > Give negated selectors the specificity of the selector they are negating.
Based on
http://www.w3.org/TR/css3-selectors/#specificity
.
Yael
Comment 3
2011-01-10 05:52:02 PST
Committed 75369. <
http://trac.webkit.org/changeset/75369
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug