Specificity of negated selectors apparently miscalculated https://bugs.webkit.org/show_bug.cgi?id=41206

Reviewed by Simon Fraser.

Source/WebCore: 

Give negated selectors the specificity of the selector they are negating.
This is the same as the behavior of other browsers.

Test: fast/css/pseudo-not.html

* css/CSSSelector.cpp:
(WebCore::CSSSelector::specificityForOneSelector):

LayoutTests: 

* fast/css/pseudo-not-expected.txt: Added.
* fast/css/pseudo-not.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@75369 bbb929c8-8fbe-4397-9dbb-9b2b20218538